--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "date-fns": "^2.21.1",
     "react": "^17.0.0",
     "react-dom": "^17.0.0"
   },
