--- a/package.json
+++ b/package.json
@@ -1,7 +1,18 @@
 {
   "name": "react-date-controls",
   "version": "0.0.0",
-  "type": "module",
+  "license": "MIT",
+  "files": [
+    "dist"
+  ],
+  "main": "./dist/react-date-controls.umd.js",
+  "module": "./dist/react-date-controls.es.js",
+  "exports": {
+    ".": {
+      "import": "./dist/react-date-controls.es.js",
+      "require": "./dist/react-date-controls.umd.js"
+    }
+  },
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -30,11 +41,13 @@
     "@types/node": "^15.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/styled-components": "^5.1.9",
     "@vitejs/plugin-react-refresh": "^1.3.1",
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
     "jest": "^26.6.3",
     "jest-junit": "^12.0.0",
+    "styled-components": "^5.3.0",
     "ts-jest": "^26.5.5",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.2",
