File structure reorganized

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,6 @@
     "isolatedModules": false,
     "jsx": "react"
   },
-  "include": ["./src"],
+  "include": ["./src", "./test"],
   "exclude": ["node_modules"]
 }
