--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,6 @@
     "isolatedModules": false,
     "jsx": "react"
   },
-  "include": ["./src", "./test"],
-  "exclude": ["node_modules"]
+  "include": ["./src", "index.ts"],
+  "exclude": ["node_modules",  "./test", "main.tsx"]
 }
