--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "dev": "vite",
     "build": "vite build && tsc --emitDeclarationOnly",
     "serve": "vite preview",
-    "test": "jest"
+    "test": "jest",
+    "coverage": "jest --coverage"
   },
   "dependencies": {
     "date-fns": "^2.21.1",
