--- a/examples/calendar/package.json
+++ b/examples/calendar/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "react": "^17.0.0",
-    "react-date-controls": "^0.0.55",
+    "react-date-controls": "*",
     "react-dom": "^17.0.0"
   },
   "devDependencies": {
