--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,6 @@
     "isolatedModules": false,
     "jsx": "react"
   },
-  "include": ["./src", "index.ts"],
-  "exclude": ["node_modules", "./test", "./src/main.tsx"]
+  "include": ["src"],
+  "exclude": ["node_modules", "test"]
 }
