--- a/package.json
+++ b/package.json
@@ -23,11 +23,15 @@
     "release-patch": "npm version patch -m \"Release %s\""
   },
   "dependencies": {
-    "date-fns": "^2.21.1",
+    "date-fns": "^2.21.1"
+  },
+  "peerDependencies": {
     "react": "^17.0.0",
     "react-dom": "^17.0.0"
   },
   "devDependencies": {
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0",
     "@babel/core": "^7.14.0",
     "@babel/preset-env": "^7.14.0",
     "@babel/preset-typescript": "^7.13.0",
