Added build before release-patch

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "serve": "vite preview",
     "test": "jest",
     "coverage": "jest --coverage",
-    "release-patch": "npm version patch -m \"Release %s\""
+    "release-patch": "npm run build && npm version patch -m \"Release %s\""
   },
   "dependencies": {
     "date-fns": "^2.21.1"
